kube/components/superset/superset-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: superset
    spec:
      containers:
      - image: apache/superset:latest
        command: [ "/bin/sh", "-c" ]
        args:
          - |
            echo "Creating admin user"
            superset fab create-admin --username admin --firstname Admin --lastname Admin --email admin@superset.com --password admin
            echo "Starting superset"
            gunicorn --bind 0.0.0.0:8088 --workers 4 superset:app
        name: superset
        ports:
          - containerPort: 8088
        volumeMounts:
          - mountPath: /home/superset/etc/superset/superset_config.py
            name: superset-configs-volume
            subPath: superset_config.py
      volumes:
        - name: superset-configs-volume
          configMap:
            name: superset-configmap
